[package]
name = "trade_networks"
version = "0.4.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="^1.0.111"
serde={version="^1.0.195", features = ["derive"] }
clap = {version = "^4.4.16", features=["derive", "cargo", "color", "help"]}
bincode = "1.3.3"
rayon = "^1.8.0"
net_ensembles = { git = "https://github.com/Pardoxa/net_ensembles.git", rev = "f7922afeb09a7c9c8c48cf01326355780bfd7193" }
indicatif="^0.17.7"
anyhow = "^1.0.79"
strum = { version = "0.25", features = ["derive"] }
lazy_static = "^1.4.0"
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "35af57324c6b33e4bfbbc3907db7ea3b6f40d386" }
itertools = "^0.12.0"
glob = "0.3.1"
fs-err = "^2.11.0"
camino = "^1.1.6"
regex = "1.10.3"
kahan = "0.1.4"
ordered-float = { version = "4.0", default-features = false }

[build-dependencies]
chrono = "0.4.31"

[profile.release]
lto = true
strip = true
