[package]
name = "trade_networks"
version = "0.5.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="^1.0.135"
serde={version="^1.0.217", features = ["derive"] }
clap = {version = "^4.5.23", features=["derive", "cargo", "color", "help"]}
bincode = "1.3.3"
rayon = "^1.8.0"
net_ensembles = { git = "https://github.com/Pardoxa/net_ensembles.git", rev = "f7922afeb09a7c9c8c48cf01326355780bfd7193" }
indicatif="^0.17.9"
anyhow = "^1.0.95"
strum = { version = "0.26.3", features = ["derive"] }
lazy_static = "^1.5.0"
#sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "35af57324c6b33e4bfbbc3907db7ea3b6f40d386" }
sampling = "0.2.0"
itertools = "^0.14.0"
glob = "0.3.2"
fs-err = "3.0.0"
camino = { version = "^1.1.9", features = ["serde1"]}
regex = "1.11.1"
kahan = "0.1.4"
ordered-float = { version = "4.6", default-features = false }
either = "1.13.0"
derivative = "2.2.0"
rand = "0.8.5"
rand_pcg = "0.3.1"

[build-dependencies]
chrono = {version = "0.4.39"}

[profile.release]
lto = true
strip = true
